Jobs Autofill with User Auth

--- a/popup.html
+++ b/popup.html
@@ -1,1 +1,21 @@
-test popup
+<!DOCTYPE html>
+<html>
+    <head>
+
+        <link type="text/css" rel="stylesheet" href="popup.css" />
+    </head>
+    <body>
+        <div id="afterlogin">
+            <button class="button" id="create">Create Profile</button>
+            <button class="button" id="edit">Edit Profile</button>
+            <button class="button" id="autofill">Auto Fill</button>
+            <button class="button" id="go-to-options">Go to options</button>
+        </div>
+        <div id="beforelogin">
+            <button class="button" id="login">Login</button>
+            <button class="button" id="signup">Sign up</button>
+        </div>
+    </body>
+    <script src="popup.js"></script>
+
+</html>
