Auto fill Feature & login

--- a/options.html
+++ b/options.html
@@ -37,6 +37,11 @@
                 <div class="form-item-title">Email</div>
                 <input type="text" name="email" />
             </div>
+            <div class="form-item" id="password-form-item">
+                <div class="form-item-title">Password</div>
+                <input type="text" name="password" placeholder="we won't share this to any website, this is for your account with us" />
+                <br />
+            </div>
 
             <div class="form-item">
                 <div class="form-item-title">Phone Number</div>
