--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
         <div class="title">Workhunt</div>
         <div class="subtitle">Making job search easy</div>
         <div id="afterlogin">
-            <button class="button" id="create">Create Profile</button>
+            <button class="button" id="create">Profile</button>
             <button class="button" id="edit">Edit Profile</button>
             <br />
             <button class="button" id="autofill" style="display: none;">Auto Fill</button>
