--- a/options.html
+++ b/options.html
@@ -102,6 +102,15 @@
         />
       </div>
 
+      <div class="form-item">
+        <div class="form-item-title">Current/Latest Company</div>
+        <input
+          type="text"
+          name="latestcompany"
+          placeholder="Enter You no. of Experience"
+        />
+      </div>
+
       <hr />
 
       <h2 class="subtitle">Social Media</h2>
@@ -119,6 +128,11 @@
       <div class="form-item">
         <div class="form-item-title">Github</div>
         <input type="text" name="github" placeholder="Github URL" />
+      </div>
+
+      <div class="form-item">
+        <div class="form-item-title">Portfolio</div>
+        <input type="text" name="portfolio" placeholder="Github URL" />
       </div>
 
       <div class="form-item">
